searchbar implementada en la interfaz

--- a/src/assets/i18n/en-EN.json
+++ b/src/assets/i18n/en-EN.json
@@ -2,5 +2,6 @@
     "lang" : "Language",
     "offices": "list of close offices",
     "clientLocation": "Your current location",
-    "search": "Search"
+    "search": "Search",
+    "find": "Searching for location"
 }
