open modal when you press a cashier

--- a/src/assets/i18n/en-EN.json
+++ b/src/assets/i18n/en-EN.json
@@ -3,5 +3,8 @@
     "offices": "list of close offices",
     "clientLocation": "Your current location",
     "search": "Search",
-    "find": "Searching for location"
+    "find": "Searching for location",
+    "deposit": "deposit",
+    "draw": "draw",
+    "operation": "operation"
 }
