fixing client.service, some qr things

--- a/src/assets/i18n/en-EN.json
+++ b/src/assets/i18n/en-EN.json
@@ -10,5 +10,6 @@
     "cashierImage": "Cashier Image",
     "cashierAvailable": "Available",
     "cashierNotAvailable": "Not available",
-    "transactions": "Transactions"
+    "transactions": "Transactions",
+    "close": "close"
 }
