--- a/src/assets/i18n/en-EN.json
+++ b/src/assets/i18n/en-EN.json
@@ -11,5 +11,6 @@
     "cashierAvailable": "Available",
     "cashierNotAvailable": "Not available",
     "transactions": "Transactions",
-    "close": "close"
+    "close": "close",
+    "time": "time"
 }
