--- a/src/assets/i18n/es-ES.json
+++ b/src/assets/i18n/es-ES.json
@@ -11,5 +11,6 @@
     "cashierAvailable": "Disponible",
     "cashierNotAvailable": "No disponible",
     "transactions": "Transacciones",
-    "close": "cerrar"
+    "close": "cerrar",
+    "time": "tiempo"
 }
