--- a/src/assets/i18n/en-EN.json
+++ b/src/assets/i18n/en-EN.json
@@ -4,17 +4,18 @@
     "clientLocation": "Your current location",
     "search": "Search",
     "find": "Searching for location",
-    "deposit": "deposit",
-    "draw": "draw",
-    "operation": "operation",
+    "deposit": "Deposit",
+    "draw": "Draw",
+    "operation": "Operation",
     "cashierImage": "Cashier Image",
     "cashierAvailable": "Available",
     "cashierNotAvailable": "Not available",
     "transactions": "Transactions",
     "close": "Close",
     "time": "time",
-    "scanQR": "please scan the QR in the ATM machine before the time runs out",
+    "scanQR": "Please scan the QR in the ATM machine before the time runs out",
     "cancelText": "Are you sure you want to cancel the transaction?",
     "confirm": "Yes",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "noAmount": "There is no amount introduce, or is not between the possibles values"
 }
