--- a/src/assets/i18n/es-ES.json
+++ b/src/assets/i18n/es-ES.json
@@ -4,9 +4,9 @@
     "clientLocation": "Tu posicion actual",
     "search": "Buscar",
     "find": "Buscando Localización",
-    "deposit": "depositar",
+    "deposit": "Depositar",
     "draw": "extraer",
-    "operation": "operación",
+    "operation": "Operación",
     "cashierImage": "Imagen de cajero",
     "cashierAvailable": "Disponible",
     "cashierNotAvailable": "No disponible",
@@ -16,5 +16,6 @@
     "scanQR": "Por favor, escanee el código QR antes de que  el tiempo se agote",
     "cancelText": "¿Estás seguro que quieres cancelar la transacción?",
     "confirm": "Si",
-    "cancel": "Cancelar"
+    "cancel": "Cancelar",
+    "noAmount": "No hay una cantidad introducida, o no esta dentro de la cantidad permitida"
 }
