--- a/src/assets/i18n/en-EN.json
+++ b/src/assets/i18n/en-EN.json
@@ -18,18 +18,18 @@
     "confirm": "Yes",
     "cancel": "Cancel",
     "noAmount": "There is no amount introduce, or is not between the possibles values",
-    "DNI": "DNI",
+    "user": "User",
     "password": "Password",
     "attention": "Attention",
-    "wrongCredencial": "DNI or Password are wrong. Please rewrite the fields",
+    "wrongCredencial": "User or Password are wrong. Please rewrite the fields",
     "forgotPassword": "Forgot the password?",
     "writeEmail": "Write an email account",
     "send": "Send",
-    "createAccount": "Create a new account",
+    "createAccount": "Be an IESBanco user",
     "account": "Account",
     "email": "Email",
     "newAccount": "New Account",
-    "noEmail": "You haven`t introuduce any email",
+    "noEmail": "You haven`t introduce any email",
     "login": "Login",
     "end": "End",
     "successCreate": "Account succesfully create"
