--- a/src/assets/i18n/es-ES.json
+++ b/src/assets/i18n/es-ES.json
@@ -18,14 +18,14 @@
     "confirm": "Si",
     "cancel": "Cancelar",
     "noAmount": "No hay una cantidad introducida, o no esta dentro de la cantidad permitida",
-    "DNI": "DNI",
+    "user": "Usuario",
     "password": "Contraseña",
     "attention": "Atención",
-    "wrongCredencial": "DNI o contraseña incorrectos. Por favor revise los datos",
+    "wrongCredencial": "Usuario o contraseña incorrectos. Por favor revise los datos",
     "forgotPassword": "¿Olvidastes la contraseña?",
     "writeEmail": "Escribe una cuenta de email",
     "send": "Enviar",
-    "createAccount": "Crear una nueva cuenta",
+    "createAccount": "Formar parte de IESBanco",
     "account": "Cuenta",
     "email": "Correo electronico",
     "newAccount": "Nueva cuenta",
