details component updated

--- a/src/assets/i18n/es-ES.json
+++ b/src/assets/i18n/es-ES.json
@@ -5,7 +5,7 @@
     "search": "Buscar",
     "find": "Buscando Localización",
     "deposit": "Depositar",
-    "draw": "extraer",
+    "draw": "Extraer",
     "operation": "Operación",
     "cashierImage": "Imagen de cajero",
     "cashierAvailable": "Disponible",
