login and map guards

--- a/src/assets/i18n/es-ES.json
+++ b/src/assets/i18n/es-ES.json
@@ -13,11 +13,11 @@
     "transactions": "Transacciones",
     "close": "Cerrar",
     "time": "tiempo",
-    "scanQR": "Por favor, escanee el código QR antes de que  el tiempo se agote",
+    "scanQR": "Por favor, escanee el código QR antes de que el tiempo se agote.",
     "cancelText": "¿Estás seguro que quieres cancelar la transacción?",
-    "confirm": "Si",
+    "confirm": "Aceptar",
     "cancel": "Cancelar",
-    "noAmount": "No hay una cantidad introducida, o no esta dentro de la cantidad permitida",
+    "noAmount": "No hay una cantidad introducida, o no esta dentro de la cantidad permitida.",
     "user": "Usuario",
     "password": "Contraseña",
     "attention": "Atención",
@@ -40,10 +40,10 @@
     "enterPassword":"Por favor, introduzca contraseña.",
     "enterData":"Por favor, introduzca los datos en sus respectivos campos.",
     "validUser":"El usuario no es válido, insértelo de nuevo",
-    "validPassword":"La contraseña no es válida, insértela de nuevo o restablécela la misma",
+    "validPassword":"La contraseña no es válida, insértela de nuevo o restablézca la misma",
     "validData":"Usuario o contraseña no válidos, insértelos de nuevo",
     "userCreated":"El usuario ha sido creado con éxito",
-    "userNotCreated":"El usuario introducido no ha sido creado porque yaexiste",
+    "userNotCreated":"El usuario introducido no ha sido creado porque ya existe",
     "create":"Usuario creado",
     "notCreate":"Usuario no creado"
 }
