--- a/src/assets/i18n/es-ES.json
+++ b/src/assets/i18n/es-ES.json
@@ -1,5 +1,6 @@
 {
     "lang" : "Idioma",
+    "loading":"Cargando",
     "offices": "Lista de oficinas cercanas",
     "clientLocation": "Tu posicion actual",
     "search": "Buscar",
@@ -12,7 +13,7 @@
     "cashierNotAvailable": "No disponible",
     "transactions": "Transacciones",
     "close": "Cerrar",
-    "time": "tiempo",
+    "time": "Tiempo",
     "scanQR": "Por favor, escanee el código QR antes de que el tiempo se agote.",
     "cancelText": "¿Estás seguro que quieres cancelar la transacción?",
     "confirm": "Aceptar",
@@ -23,7 +24,7 @@
     "password": "Contraseña",
     "attention": "Atención",
     "wrongCredencial": "Usuario o contraseña incorrectos. Por favor revise los datos",
-    "forgotPassword": "¿Olvidastes la contraseña?",
+    "forgotPassword": "¿Olvidaste la contraseña?",
     "writeEmail": "Escribe una cuenta de email",
     "send": "Enviar",
     "createAccount": "Formar parte de IESBanco",
