Changes Login, Register, creating change password

--- a/src/assets/i18n/en-EN.json
+++ b/src/assets/i18n/en-EN.json
@@ -1,63 +1,68 @@
 {
-    "lang" : "Language",
-    "loading":"Loading",
-    "offices": "List of close offices",
-    "clientLocation": "Your current location",
-    "search": "Search",
-    "find": "Searching for location",
-    "deposit": "Deposit",
-    "draw": "Draw",
-    "operation": "Operation",
-    "cashierImage": "Cashier Image",
-    "cashierAvailable": "Available",
-    "cashierNotAvailable": "Not available",
-    "transactions": "Transactions",
-    "close": "Close",
-    "time": "Time",
-    "scanQR": "Please scan the QR in the ATM machine before the time runs out",
-    "cancelText": "Are you sure you want to cancel the transaction?",
-    "confirm": "Yes",
-    "cancel": "Cancel",
-    "noAmount": "There is no amount introduce, or is not between the possibles values",
-    "user": "User",
-    "dni":"DNI",
-    "password": "Password",
-    "attention": "Attention",
-    "wrongCredencial": "User or Password are wrong. Please rewrite the fields",
-    "forgotPassword": "Forgot the password?",
-    "writeEmail": "Write an email account",
-    "send": "Send",
-    "createAccount": "Be an IESBanco user",
-    "account": "Account",
-    "email": "Email",
-    "newAccount": "New Account",
-    "noEmail": "You haven`t introduce any email",
-    "login": "Login",
-    "end": "End",
-    "error":"Error",
-    "successCreate": "Account succesfully create",
-    "verificate": "User verified",
-    "userVerified":"User was verified successfully",
-    "errorVerificate":"Verification error",
-    "errorServer":"Server connection error",
-    "enterUser":"Enter user, please",
-    "enterPassword":"Enter password, please",
-    "enterData":"Enter user and password on the fileds, please",
-    "validUser":"User isn't valid, insert it again",
-    "validPassword":"Password isn't valid, insert it again or restablish it",
-    "validData":"User or password isn't valid, insert it again",
-    "userCreated":"User has been created successfully",
-    "userNotCreated":"User hasn't been created because exists",
-    "create":"User created",
-    "notCreate":"User not created",
-    "notExist":"User not exists",
-    "userNotExists":"The user doesn't exists",
-    "globalPosition":"Global position",
-    "accounts":"Accounts",
-    "receipts":"Receipts",
-    "cards":"Cards",
-    "transfers":"Transfers",
-    "deposits":"Deposits",
-    "atm":"ATM",
-    "noResults":"No results"
+  "lang": "Language",
+  "loading": "Loading",
+  "offices": "List of close offices",
+  "clientLocation": "Your current location",
+  "search": "Search",
+  "find": "Searching for location",
+  "deposit": "Deposit",
+  "draw": "Draw",
+  "operation": "Operation",
+  "cashierImage": "Cashier Image",
+  "cashierAvailable": "Available",
+  "cashierNotAvailable": "Not available",
+  "transactions": "Transactions",
+  "close": "Close",
+  "time": "Time",
+  "scanQR": "Please scan the QR in the ATM machine before the time runs out",
+  "cancelText": "Are you sure you want to cancel the transaction?",
+  "confirm": "Yes",
+  "cancel": "Cancel",
+  "noAmount": "There is no amount introduce, or is not between the possibles values",
+  "user": "User",
+  "dni": "DNI",
+  "password": "Password",
+  "attention": "Attention",
+  "wrongCredencial": "User or Password are wrong. Please rewrite the fields",
+  "forgotPassword": "Forgot the password?",
+  "newPassword": "New password",
+  "writeEmail": "Write an email account",
+  "send": "Send",
+  "createAccount": "Be an IESBanco user",
+  "account": "Account",
+  "email": "Email",
+  "newAccount": "New Account",
+  "noEmail": "You haven`t introduce any email",
+  "login": "Login",
+  "end": "End",
+  "error": "Error",
+  "successCreate": "Account succesfully create",
+  "verificate": "User verified",
+  "userVerified": "User was verified successfully",
+  "errorVerificate": "Verification error",
+  "errorServer": "Server connection error",
+  "enterUser": "Enter user, please",
+  "enterPassword": "Enter password, please",
+  "enterData": "Enter user and password on the fileds, please",
+  "validUser": "User isn't valid, insert it again",
+  "validPassword": "Password isn't valid, insert it again or restablish it",
+  "validData": "User or password isn't valid, insert it again",
+  "userCreated": "User has been created successfully",
+  "userNotCreated": "User hasn't been created because exists",
+  "create": "User created",
+  "notCreate": "User not created",
+  "notExist": "User not exists",
+  "userNotExists": "The user doesn't exists",
+  "globalPosition": "Global position",
+  "accounts": "Accounts",
+  "receipts": "Receipts",
+  "cards": "Cards",
+  "transfers": "Transfers",
+  "deposits": "Deposits",
+  "atm": "ATM",
+  "noResults": "No results",
+  "dniInfo": "Format: 8 numbers from 0 to 9 and a capital letter. DNI must be real",
+  "passwordInfo": "Format: Combination of numbers or letters and a symbol(- _ . , º ª * + - Ç)",
+  "accountInfo": "Format: ES with 2 numbers away fron 5 groups of 4 numbers all of them",
+  "mailInfo": "Format: Combination of numbers or letters with at least one capital letter, an @, type of mail, dot and the mail's domain"
 }
