--- a/src/assets/i18n/es-ES.json
+++ b/src/assets/i18n/es-ES.json
@@ -1,63 +1,68 @@
 {
-    "lang" : "Idioma",
-    "loading":"Cargando",
-    "offices": "Lista de oficinas cercanas",
-    "clientLocation": "Tu posicion actual",
-    "search": "Buscar",
-    "find": "Buscando Localización",
-    "deposit": "Depositar",
-    "draw": "Extraer",
-    "operation": "Operación",
-    "cashierImage": "Imagen de cajero",
-    "cashierAvailable": "Disponible",
-    "cashierNotAvailable": "No disponible",
-    "transactions": "Transacciones",
-    "close": "Cerrar",
-    "time": "Tiempo",
-    "scanQR": "Por favor, escanee el código QR antes de que el tiempo se agote.",
-    "cancelText": "¿Estás seguro que quieres cancelar la transacción?",
-    "confirm": "Aceptar",
-    "cancel": "Cancelar",
-    "noAmount": "No hay una cantidad introducida, o no esta dentro de la cantidad permitida.",
-    "user": "Usuario",
-    "dni":"DNI",
-    "password": "Contraseña",
-    "attention": "Atención",
-    "wrongCredencial": "Usuario o contraseña incorrectos. Por favor revise los datos",
-    "forgotPassword": "¿Olvidaste la contraseña?",
-    "writeEmail": "Escribe una cuenta de email",
-    "send": "Enviar",
-    "createAccount": "Formar parte de IESBanco",
-    "account": "Cuenta",
-    "email": "Correo electronico",
-    "newAccount": "Nueva cuenta",
-    "noEmail": "No ha introducido ningún email",
-    "login": "Verificar",
-    "end": "Terminar",
-    "error":"Error",
-    "successCreate": "Cuenta creada correctamente",
-    "verificate": "Usuario verificado.",
-    "userVerified":"El usuario ha sido verificado correctamente",
-    "errorVerificate":"Error de verificación.",
-    "errorServer":"Error de conexión con el servidor",
-    "enterUser":"Por favor, introduzca usuario.",
-    "enterPassword":"Por favor, introduzca contraseña.",
-    "enterData":"Por favor, introduzca los datos en sus respectivos campos.",
-    "validUser":"El usuario no es válido, insértelo de nuevo",
-    "validPassword":"La contraseña no es válida, insértela de nuevo o restablézca la misma",
-    "validData":"Usuario o contraseña no válidos, insértelos de nuevo",
-    "userCreated":"El usuario ha sido creado con éxito",
-    "userNotCreated":"El usuario introducido no ha sido creado porque ya existe",
-    "create":"Usuario creado",
-    "notCreate":"Usuario no creado",
-    "notExist":"Usuario inexistente",
-    "userNotExists":"El usuario no existe",
-    "globalPosition":"Posición global",
-    "accounts":"Cuentas",
-    "receipts":"Recibos",
-    "cards":"Tarjetas",
-    "transfers":"Transferencias",
-    "deposits":"Depósitos",
-    "atm":"Cajeros",
-    "noResults":"No hay resultados"
+  "lang": "Idioma",
+  "loading": "Cargando",
+  "offices": "Lista de oficinas cercanas",
+  "clientLocation": "Tu posicion actual",
+  "search": "Buscar",
+  "find": "Buscando Localización",
+  "deposit": "Depositar",
+  "draw": "Extraer",
+  "operation": "Operación",
+  "cashierImage": "Imagen de cajero",
+  "cashierAvailable": "Disponible",
+  "cashierNotAvailable": "No disponible",
+  "transactions": "Transacciones",
+  "close": "Cerrar",
+  "time": "Tiempo",
+  "scanQR": "Por favor, escanee el código QR antes de que el tiempo se agote.",
+  "cancelText": "¿Estás seguro que quieres cancelar la transacción?",
+  "confirm": "Aceptar",
+  "cancel": "Cancelar",
+  "noAmount": "No hay una cantidad introducida, o no esta dentro de la cantidad permitida.",
+  "user": "Usuario",
+  "dni": "DNI",
+  "password": "Contraseña",
+  "attention": "Atención",
+  "wrongCredencial": "Usuario o contraseña incorrectos. Por favor revise los datos",
+  "forgotPassword": "¿Olvidaste la contraseña?",
+  "newPassword": "Nueva contraseña",
+  "writeEmail": "Escribe una cuenta de email",
+  "send": "Enviar",
+  "createAccount": "Formar parte de IESBanco",
+  "account": "Cuenta",
+  "email": "Correo electronico",
+  "newAccount": "Nueva cuenta",
+  "noEmail": "No ha introducido ningún email",
+  "login": "Verificar",
+  "end": "Terminar",
+  "error": "Error",
+  "successCreate": "Cuenta creada correctamente",
+  "verificate": "Usuario verificado.",
+  "userVerified": "El usuario ha sido verificado correctamente",
+  "errorVerificate": "Error de verificación.",
+  "errorServer": "Error de conexión con el servidor",
+  "enterUser": "Por favor, introduzca usuario.",
+  "enterPassword": "Por favor, introduzca contraseña.",
+  "enterData": "Por favor, introduzca los datos en sus respectivos campos.",
+  "validUser": "El usuario no es válido, insértelo de nuevo",
+  "validPassword": "La contraseña no es válida, insértela de nuevo o restablézca la misma",
+  "validData": "Usuario o contraseña no válidos, insértelos de nuevo",
+  "userCreated": "El usuario ha sido creado con éxito",
+  "userNotCreated": "El usuario introducido no ha sido creado porque ya existe",
+  "create": "Usuario creado",
+  "notCreate": "Usuario no creado",
+  "notExist": "Usuario inexistente",
+  "userNotExists": "El usuario no existe",
+  "globalPosition": "Posición global",
+  "accounts": "Cuentas",
+  "receipts": "Recibos",
+  "cards": "Tarjetas",
+  "transfers": "Transferencias",
+  "deposits": "Depósitos",
+  "atm": "Cajeros",
+  "noResults": "No hay resultados",
+  "dniInfo": "Formato: 8 números de 0 a 9 y una letra mayúscula. El DNI debe ser real",
+  "passwordInfo": "Formato: Combinación de números o letras y un símbolo(- _ . , º ª * + - Ç)",
+  "accountInfo": "Formato: ES más 2 números separado de 5 grupos de 4 números cada uno",
+  "mailInfo": "Formato: Combinación de números o letras con una mayúscula como mínimo, un @, el tipo de mail, un punto y el dominio de éste"
 }
