--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -33,7 +33,8 @@
   "email": "Correo electronico",
   "newAccount": "Nueva cuenta",
   "noEmail": "No ha introducido ningún email",
-  "login": "Verificar",
+  "login": "Iniciar sesión",
+  "logout": "Cerrar sesión",
   "end": "Terminar",
   "error": "Error",
   "successCreate": "Cuenta creada correctamente",
