--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -65,5 +65,6 @@
   "dniInfo": "Format: 8 numbers from 0 to 9 and a capital letter. DNI must be real",
   "passwordInfo": "Format: Combination of numbers or letters and a symbol(- _ . , º ª * + - Ç)",
   "accountInfo": "Format: ES with 2 numbers away fron 5 groups of 4 numbers all of them",
-  "mailInfo": "Format: Combination of numbers or letters with at least one capital letter, an @, type of mail, dot and the mail's domain"
+  "mailInfo": "Format: Combination of numbers or letters with at least one capital letter, an @, type of mail, dot and the mail's domain",
+  "gpsError": "The location is not accurate."
 }
