user feedback messages fixed

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -66,5 +66,6 @@
   "passwordInfo": "Formato: Combinación de números o letras y un símbolo(- _ . , º ª * + - Ç)",
   "accountInfo": "Formato: ES más 2 números separado de 5 grupos de 4 números cada uno",
   "mailInfo": "Formato: Combinación de números o letras con una mayúscula como mínimo, un @, el tipo de mail, un punto y el dominio de éste",
-  "gpsError": "La localización no es precisa."
+  "gpsError": "La localización no es precisa.",
+  "emptySearchbar": "Buscador vacío"
 }
