--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -66,5 +66,6 @@
   "passwordInfo": "Format: Combination of numbers or letters and a symbol(- _ . , º ª * + - Ç)",
   "accountInfo": "Format: ES with 2 numbers away fron 5 groups of 4 numbers all of them",
   "mailInfo": "Format: Combination of numbers or letters with at least one capital letter, an @, type of mail, dot and the mail's domain",
-  "gpsError": "The location is not accurate."
+  "gpsError": "The location is not accurate.",
+  "emptySearchbar": "Empty searchbar"
 }
