Login & Register responsive

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -47,6 +47,7 @@
   "enterData": "Enter user and password on the fileds, please",
   "validUser": "User isn't valid, insert it again",
   "validPassword": "Password isn't valid, insert it again or restablish it",
+  "validNoUserPassword": "Password is not valid because the user is not registered",
   "validData": "User or password isn't valid, insert it again",
   "userCreated": "User has been created successfully",
   "userNotCreated": "User hasn't been created because exists",
