--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -47,6 +47,7 @@
   "enterData": "Por favor, introduzca los datos en sus respectivos campos.",
   "validUser": "El usuario no es válido, insértelo de nuevo",
   "validPassword": "La contraseña no es válida, insértela de nuevo o restablézca la misma",
+  "validNoUserPassword": "La contraseña no coincide porque el usuario no está registrado",
   "validData": "Usuario o contraseña no válidos, insértelos de nuevo",
   "userCreated": "El usuario ha sido creado con éxito",
   "userNotCreated": "El usuario introducido no ha sido creado porque ya existe",
