Language button added Login & tootips added Register

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -65,7 +65,7 @@
   "noResults": "No hay resultados",
   "dniInfo": "Formato: 8 números de 0 a 9 y una letra mayúscula. El DNI debe ser real",
   "passwordInfo": "Formato: Combinación de números o letras y un símbolo(- _ . , º ª * + - Ç)",
-  "accountInfo": "Formato: ES más 2 números separado de 5 grupos de 4 números cada uno",
+  "accountInfo": "Formato: ES + 2 números separado de 5 grupos de 4 números cada uno",
   "mailInfo": "Formato: Combinación de números o letras con una mayúscula como mínimo, un @, el tipo de mail, un punto y el dominio de éste",
   "gpsError": "La localización no es precisa.",
   "emptySearchbar": "Buscador vacío"
