--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,7 +28,7 @@
   "newPassword": "New password",
   "writeEmail": "Write an email account",
   "send": "Send",
-  "createAccount": "Be an IESBanco user",
+  "createAccount": "Sign up IESBanco",
   "account": "Account",
   "email": "Email",
   "newAccount": "New Account",
