--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -28,7 +28,7 @@
   "newPassword": "Nueva contraseña",
   "writeEmail": "Escribe una cuenta de email",
   "send": "Enviar",
-  "createAccount": "Formar parte de IESBanco",
+  "createAccount": "Forma parte de IESBanco",
   "account": "Cuenta",
   "email": "Correo electronico",
   "newAccount": "Nueva cuenta",
