admin panel component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -71,5 +71,6 @@
   "gpsError": "The location is not accurate.",
   "emptySearchbar": "Empty searchbar",
   "underConstruction": "Page under construction",
-  "pageNotFound": "Page not found"
+  "pageNotFound": "Page not found",
+  "adminPanel": "Admin panel"
 }
