--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -72,5 +72,6 @@
   "emptySearchbar": "Buscador vacío",
   "underConstruction": "Página en construcción",
   "pageNotFound": "Página no encontrada",
-  "adminPanel": "Panel de administrador"
+  "adminPanel": "Panel de administrador",
+  "adminMode": "Opciones de administrador activadas"
 }
