--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,7 @@
 {
   "lang": "Language",
+  "cashiers": "cashiers",
+  "admin": "Administrator",
   "loading": "Loading",
   "offices": "List of close offices",
   "clientLocation": "Your current location",
@@ -9,6 +11,7 @@
   "draw": "Draw",
   "operation": "Operation",
   "cashierImage": "Cashier Image",
+  "available": "Availability",
   "cashierAvailable": "Available",
   "cashierNotAvailable": "Not available",
   "transactions": "Transactions",
@@ -73,9 +76,21 @@
   "underConstruction": "Page under construction",
   "pageNotFound": "Page not found",
   "adminPanel": "Admin panel",
-  "profilePage":"Profile",
-  "restorePass":"Data is not correct. Put this user's email",
-  "sendPass":"Password sended",
-  "lookEmail":"Look at your email",
-  "adminMode": "Admin mode on"
+  "profilePage": "Profile",
+  "restorePass": "Data is not correct. Put this user's email",
+  "sendPass": "Password sended",
+  "lookEmail": "Look at your email",
+  "adminMode": "Admin mode on",
+  "edit": "Edit",
+  "update": "Update",
+  "delete": "Delete",
+  "new": "New",
+  "yes": "Yes",
+  "no": "No",
+  "address": "Address",
+  "cp": "Postal Code",
+  "locality": "Locality",
+  "latitude": "Latitude",
+  "longitude": "Longitude",
+  "balance": "Balance"
 }
