--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,5 +1,7 @@
 {
   "lang": "Idioma",
+  "cashiers": "Cajeros",
+  "admin": "Administrador",
   "loading": "Cargando",
   "offices": "Lista de oficinas cercanas",
   "clientLocation": "Su posición actual",
@@ -9,6 +11,7 @@
   "draw": "Extraer",
   "operation": "Operación",
   "cashierImage": "Imagen de cajero",
+  "available": "Disponibilidad",
   "cashierAvailable": "Disponible",
   "cashierNotAvailable": "No disponible",
   "transactions": "Transacciones",
@@ -73,9 +76,21 @@
   "underConstruction": "Página en construcción",
   "pageNotFound": "Página no encontrada",
   "adminPanel": "Panel de administrador",
-  "profilePage":"Perfil",
-  "restorePass":"Los datos no son los que se esperaban. Inserte el correo de éste usuario",
-  "sendPass":"Contraseña enviada",
-  "lookEmail":"Mire su correo electrónico",
-  "adminMode": "Opciones de administrador activadas"
+  "profilePage": "Perfil",
+  "restorePass": "Los datos no son los que se esperaban. Inserte el correo de éste usuario",
+  "sendPass": "Contraseña enviada",
+  "lookEmail": "Mire su correo electrónico",
+  "adminMode": "Opciones de administrador activadas",
+  "edit": "Editar",
+  "update": "Actualizar",
+  "delete": "Eliminar",
+  "new": "Nuevo",
+  "yes": "Si",
+  "no": "No",
+  "address": "Dirección",
+  "cp": "Código Postal",
+  "locality": "Localidad",
+  "latitude": "Latitud",
+  "longitude": "Longitud",
+  "balance": "Balance"
 }
