buttons admin panel and confirm modal component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -95,5 +95,7 @@
   "balance": "Balance",
   "deleteCashier": "Cashier removed successfully",
   "cashierNotFound": "Cashier not found",
-  "cashierIdMissing": "ID missing"
+  "cashierIdMissing": "ID missing",
+  "serviceError": "Service error",
+  "cashierCreated": "Cashier created succesfully"
 }
