--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -95,5 +95,7 @@
   "balance": "Balance",
   "deleteCashier": "Cajero eliminado satisfactoriamente",
   "cashierNotFound": "Cajero no encontrado",
-  "cashierIdMissing": "ID no introducida"
+  "cashierIdMissing": "ID no introducida",
+  "serviceError": "Error en el servicio",
+  "cashierCreated": "Cajero insertado satisfactoriamente"
 }
